# shipwreck

./: Dockerfile  build.sh  clean.sh  readme.md
src/: CMakeLists.txt  desktop.tga
src/boot/: CMakeLists.txt  bootsector.nasm
src/include/: console.h  system.h
src/include/gui/: colors.h  objects.h  shapes.h  terminal.h
src/include/std/: atomic.h  bitops.h  bitset.h  env.h  events.h  file.h  pool.h  queue.h  random.h  string.h  types.h
src/include/util/: debug.h
src/system/: CMakeLists.txt  boot_stub.nasm  events.cpp  filesystem.cpp  gui.cpp  interrupts.cpp  locks.cpp  main.cpp  memory.cpp  process.cpp  scheduler.cpp  string.cpp  syscall.cpp  threads.cpp
src/system/api/: CMakeLists.txt  system.cpp
src/system/devices/: CMakeLists.txt  apic.cpp  ps2.cpp  terminal.cpp  vga.cpp
src/system/include/: elfparser.h  events.h  filesystem.h  gui.h  interrupts.h  kprint.h  locks.h  memory.h  page.h  process.h  scheduler.h  syscall.h  threads.h
src/system/include/devices/: apic.h  ata.h  cpu.h  io.h  ps2.h  storage.h  tar.h  terminal.h  vga.h
src/user/: CMakeLists.txt  shell.cpp
vm/: Disk1.vmdk  Shipwreck.vbox
